# okdroid

./: .gitignore  README.md  jni.list  okdroid.sh
app/: AndroidManifest.xml
app/res/layout/: main.xml
app/res/values/: strings.xml
app/src/java/king/demo/: MainActivity.java  Native.java
native/core/: CMakeLists.txt
native/core/src/: CMakeLists.txt  core.c
tools/: Makefile
